--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://repo.github.io/folder/index.html">
+<meta http-equiv="refresh" content="0; url=https://github.com/MatCat960/gaussian_mixture_model/html/index.html">
